# zotero-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/zotman/: cli.py  watcher.py
tests/: test_cleaner.py  test_watcher.py
