[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zotman"
version = "0.1.1"
description = "Zotero attachment management tools for linked Dropbox workflows"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Biao Jiang", email = "info@plotsignal.com" }
]
dependencies = [
    "watchdog>=6.0.0"
]

keywords = ["zotero", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Natural Language :: English",
]

[project.urls]
Homepage = "https://github.com/biaojiang/zotero-tools"
Documentation = "https://github.com/biaojiang/zotero-tools#readme"
Source = "https://github.com/biaojiang/zotero-tools"
Issues = "https://github.com/biaojiang/zotero-tools/issues"

[project.scripts]
zotman = "zotman.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
